--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    color: white;
+    background-color: rgb(31, 37, 56);
+}
 .action{
     background-color: red;
 }
 
 .thriller{
-    background-color: aqua;
+    background-color: rgb(0, 255, 128);
+}
+
+img{
+    max-width: 200px;
 }
